# RMDControl

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LogUtil.h  RMD.cpp  RMD.h  RMDControl.c  RMDControl.cpp  RMDControl.h  RMDController.cpp  RMDController.h  RMDMotor.cpp  RMDMotor.h  SerialPort.cpp  SerialPort.h  command.txt  main.c  main.cpp  makefile
.github/workflows/: cmake-single-platform.yml
html/: _r_m_d_control_8c.html  _r_m_d_control_8h.html  _r_m_d_control_8h_source.html  doxygen_crawl.html  files.html  globals.html  globals_func.html  index.html  menudata.js
html/search/: all_0.js  files_0.js  functions_0.js  searchdata.js
